--- a/_notebooks/2022-11-7-incremation.ipynb
+++ b/_notebooks/2022-11-7-incremation.ipynb
@@ -2,22 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4256304337.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [22]\u001b[0;36m\u001b[0m\n\u001b[0;31m    global run  ugiug\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seconds: 465\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Seconds: 131\n"
+      "Seconds: 466\n",
+      "Seconds: 467\n",
+      "Seconds: 468\n",
+      "Seconds: 469\n",
+      "Seconds: 470\n",
+      "Seconds: 471\n",
+      "Seconds: 472\n",
+      "Seconds: 473\n",
+      "Seconds: 474\n",
+      "Seconds: 475\n",
+      "Seconds: 476\n",
+      "Seconds: 477\n",
+      "Seconds: 478\n",
+      "Seconds: 479\n"
      ]
     }
    ],
