--- a/_notebooks/2022-11-7-incremation.ipynb
+++ b/_notebooks/2022-11-7-incremation.ipynb
@@ -29,7 +29,67 @@
       "Seconds: 476\n",
       "Seconds: 477\n",
       "Seconds: 478\n",
-      "Seconds: 479\n"
+      "Seconds: 479\n",
+      "Seconds: 480\n",
+      "Seconds: 481\n",
+      "Seconds: 482\n",
+      "Seconds: 483\n",
+      "Seconds: 484\n",
+      "Seconds: 485\n",
+      "Seconds: 486\n",
+      "Seconds: 487\n",
+      "Seconds: 488\n",
+      "Seconds: 489\n",
+      "Seconds: 490\n",
+      "Seconds: 491\n",
+      "Seconds: 492\n",
+      "Seconds: 493\n",
+      "Seconds: 494\n",
+      "Seconds: 495\n",
+      "Seconds: 496\n",
+      "Seconds: 497\n",
+      "Seconds: 498\n",
+      "Seconds: 499\n",
+      "Seconds: 500\n",
+      "Seconds: 501\n",
+      "Seconds: 502\n",
+      "Seconds: 503\n",
+      "Seconds: 504\n",
+      "Seconds: 505\n",
+      "Seconds: 506\n",
+      "Seconds: 507\n",
+      "Seconds: 508\n",
+      "Seconds: 509\n",
+      "Seconds: 510\n",
+      "Seconds: 511\n",
+      "Seconds: 512\n",
+      "Seconds: 513\n",
+      "Seconds: 514\n",
+      "Seconds: 515\n",
+      "Seconds: 516\n",
+      "Seconds: 517\n",
+      "Seconds: 518\n",
+      "Seconds: 519\n",
+      "Seconds: 520\n",
+      "Seconds: 521\n",
+      "Seconds: 522\n",
+      "Seconds: 523\n",
+      "Seconds: 524\n",
+      "Seconds: 525\n",
+      "Seconds: 526\n",
+      "Seconds: 527\n",
+      "Seconds: 528\n",
+      "Seconds: 529\n",
+      "Seconds: 530\n",
+      "Seconds: 531\n",
+      "Seconds: 532\n",
+      "Seconds: 533\n",
+      "Seconds: 534\n",
+      "Seconds: 535\n",
+      "Seconds: 536\n",
+      "Seconds: 537\n",
+      "Seconds: 538\n",
+      "Seconds: 539\n"
      ]
     }
    ],
