--- a/_notebooks/2022-11-7-incremation.ipynb
+++ b/_notebooks/2022-11-7-incremation.ipynb
@@ -4,7 +4,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seconds: 811\n",
+      "Seconds: 812\n",
+      "Seconds: 813\n",
+      "Seconds: 814\n",
+      "Seconds: 815\n",
+      "Seconds: 816\n",
+      "Seconds: 817\n",
+      "Seconds: 818\n",
+      "Seconds: 819\n",
+      "Seconds: 820\n",
+      "Seconds: 821\n",
+      "Seconds: 822\n",
+      "Seconds: 823\n",
+      "Seconds: 824\n",
+      "Seconds: 825\n",
+      "Seconds: 826\n",
+      "Seconds: 827\n",
+      "Seconds: 828\n"
+     ]
+    }
+   ],
    "source": [
     "import threading  # import threading\n",
     "\n",
