--- a/_notebooks/2022-10-26-arrays_frq.ipynb
+++ b/_notebooks/2022-10-26-arrays_frq.ipynb
@@ -15,7 +15,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public void addMembers(String[] names, int gradYear) {\n",
@@ -37,7 +41,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
