--- a/_notebooks/2022-11-04-blog-learnings-for-tri.ipynb
+++ b/_notebooks/2022-11-04-blog-learnings-for-tri.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Week 1 Learnings\n",
+    "# Learnings\n",
     "I was pretty new to code but I learned about connecting GitHub to VSCode. This gave me a solid introduction to Computer Science. I also learned some basic Java code, such as creating a class and some basic commands."
    ]
   },
