--- a/_notebooks/2022-11-28-Lesson.ipynb
+++ b/_notebooks/2022-11-28-Lesson.ipynb
@@ -4,9 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit 1 Lesson\n",
-    "> Learning how to use Primitives and Data types!\n",
-    "- categories: [CB]"
+    "# Unit One Lesson\n",
+    "\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [jupyter]"
    ]
   },
   {
