start setup of blogs

--- a/_notebooks/2022-11-28-Lesson.ipynb
+++ b/_notebooks/2022-11-28-Lesson.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit One Lesson\n",
+    "# Unit One Lesson Homework\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Score: 0.8/1.0"
    ]
   },
   {
@@ -36,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "java"
