--- a/_notebooks/2022-12-01-unit1-java-primatives-learning.ipynb
+++ b/_notebooks/2022-12-01-unit1-java-primatives-learning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Learnings from Java Primitives lesson\n",
+    "# Unit 1 Java Primitives\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -16,7 +16,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Primitives\n",
+    "# Java Wrappers\n",
+    "\n",
     "Booleans\n",
     "* true and false\n",
     "* one bit\n",
@@ -27,18 +28,26 @@
     "\n",
     "Double\n",
     "* decimal values\n",
-    "* 64 bits"
+    "* 64 bits\n",
+    "\n",
+    "Character\n",
+    "* A single character"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "boolean a = true;\n",
     "int b = 5;\n",
-    "double c = 7.5;"
+    "double c = 7.5;\n",
+    "char d = 'a';"
    ]
   },
   {
@@ -46,17 +55,34 @@
    "metadata": {},
    "source": [
     "# Operators\n",
-    "addition: +\n",
-    "subtraction: -\n",
-    "division: /\n",
-    "multiplication: *\n",
+    "\n",
+    "#### Addition\n",
+    "Symbol: +\n",
+    "#### Subtraction\n",
+    "Symbol: -\n",
+    "#### Division \n",
+    "Symbol: /\n",
+    "\n",
+    "A <mark>casting for doubles</mark> will temporarily create a double value so that instead of having an int, it will have a double temporarily.\n",
+    "\n",
+    "&ensp;&thinsp;&ensp;&thinsp;&ensp;&thinsp; Ex: 7/(double)3 will make a temporary 3.0\n",
+    "\n",
+    "A <mark>casting for integers or rounding</mark> will temporarily round a double value so that it is an integer.\n",
+    "\n",
+    "&ensp;&thinsp;&ensp;&thinsp;&ensp;&thinsp; Ex: 7/(int)3.333 will make a temporary 3\n",
+    "#### Multiplication \n",
+    "Symbol: *\n",
     "increase varaible by 1: ++"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -87,7 +113,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "byte a = 12;\n",
@@ -97,6 +127,14 @@
     "boolean e = true;\n",
     "char f = 'W';\n",
     "String g = \"Hello\";"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework\n",
+    "[Homework](https://jz21324.github.io/Vcode/jupyter/2022/11/28/Lesson.html)"
    ]
   }
  ],
@@ -110,7 +148,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
