--- a/_notebooks/2022-12-01-unit2-objects-lesson-frq.ipynb
+++ b/_notebooks/2022-12-01-unit2-objects-lesson-frq.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FRQ 2021\n",
+    "# Unit 2 Objects\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To combine two different strings, you can use <mark>concatenation</mark> which can combine two or more strings to create one new string."
    ]
   },
   {
