--- a/_notebooks/2022-12-01-iteration-hw.ipynb
+++ b/_notebooks/2022-12-01-iteration-hw.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FRQ 2019 #2\n",
+    "# Iteration Homework\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -13,8 +13,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FRQ 2019 #2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +69,15 @@
    "name": "java"
   },
   "language_info": {
-   "codemirror_mode": "java",
-   "file_extension": ".jshell",
-   "mimetype": "text/x-java-source",
    "name": "java",
-   "pygments_lexer": "java",
-   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
+   "version": "3.8.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
