create hw lessons and such

--- a/_notebooks/2022-12-01-unit6-arrays.ipynb
+++ b/_notebooks/2022-12-01-unit6-arrays.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Array Lesson Homework\n",
+    "# Unit 6 Arrays\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -16,21 +16,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FRQ 3a Arrays"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "public void addMembers(String[] names, int gradYear) {\n",
-    "    for (String a: names) {\n",
-    "        MemberInfo newM = new memberInfo (a, gradYear, true);\n",
-    "        memberList.add(newM);\n",
-    "    }    \n",
-    "}"
+    "# Homework\n",
+    "[Homework](https://jz21324.github.io/Vcode/jupyter/2022/11/04/blog-learnings-for-tri.html)"
    ]
   }
  ],
@@ -41,12 +28,8 @@
    "name": "java"
   },
   "language_info": {
-   "codemirror_mode": "java",
-   "file_extension": ".jshell",
-   "mimetype": "text/x-java-source",
    "name": "java",
-   "pygments_lexer": "java",
-   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
