--- a/_notebooks/2022-12-01-iteration-hw.ipynb
+++ b/_notebooks/2022-12-01-iteration-hw.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Iteration Homework\n",
+    "# Unit 4 Lesson Homework\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -15,50 +15,80 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# FRQ 2019 #2"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice job!\n",
+      "code code code\n",
+      "supercalifragilisticexpialidocious\n"
+     ]
+    }
+   ],
    "source": [
-    "public class StepTracker {\n",
-    "    private int minSteps;\n",
-    "    private int totalSteps;\n",
-    "    private int numDays;\n",
-    "    private int numActivateDays;\n",
+    "public class CaesarCipher {\n",
     "\n",
-    "    public StepTracker (int threshold) {\n",
-    "        minSteps = threshold;\n",
-    "        totalSteps = 0;\n",
-    "        numDays = 0;\n",
-    "        numActiveDays = 0;\n",
-    "    }\n",
+    "    String[] letters = {\"a\", \"b\", \"c\", \"d\", \"e\", \"f\", \"g\", \"h\", \"i\", \"j\", \"k\", \"l\", \"m\", \"n\", \"o\", \"p\", \"q\", \"r\", \"s\", \"t\", \"u\", \"v\", \"w\", \"x\", \"y\", \"z\"};\n",
+    "    String[] capitalLetters = {\"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \"G\", \"H\", \"I\", \"J\", \"K\", \"L\", \"M\", \"N\", \"O\", \"P\", \"Q\", \"R\", \"S\", \"T\", \"U\", \"V\", \"W\", \"X\", \"Y\", \"Z\"};\n",
+    "    static String message1 = \"Kfzb gly!\";\n",
+    "    static String message2 = \"zlab zlab zlab\";\n",
+    "    static String message3 = \"prmbozxifcoxdfifpqfzbumfxifalzflrp\";\n",
     "\n",
-    "    public void addDailySteps(int steps) {\n",
-    "        totalSteps += steps;\n",
-    "        numDays++;\n",
-    "    \n",
-    "        if (steps >= minSteps) {\n",
-    "            numActiveDays++;\n",
+    "    String letter = \"\";\n",
+    "\n",
+    "public CaesarCipher(String message) {\n",
+    "    for (int i = 0; i < message.length(); i++) {\n",
+    "        letter = message.substring(i, i + 1);\n",
+    "\n",
+    "        if (letter.equals(\" \")) {\n",
+    "            System.out.print(\" \"); \n",
     "        }\n",
-    "    }\n",
-    "    public int activeDays() {\n",
-    "        return numActiveDays;\n",
-    "    }\n",
-    "    \n",
-    "    public double averageSteps() {\n",
-    "        if (numDays == 0) {\n",
-    "            return 0.0;\n",
+    "\n",
+    "        if (letter.equals(\"!\")) {\n",
+    "            System.out.print(\"!\"); \n",
     "        }\n",
-    "        else {\n",
-    "            return (double) totalSteps / numDays;\n",
-    "        }\n",
+    "\n",
+    "         for (int j = 0; j < letters.length; j++) {\n",
+    "            if (letter.equals(letters[j])) {\n",
+    "                System.out.print(letters[(j + 3) % 26]);\n",
+    "            }\n",
+    "            if (letter.equals(capitalLetters[j])) {\n",
+    "                System.out.print(capitalLetters[(j+3)%26]); \n",
+    "            }\n",
+    "         }\n",
+    "        \n",
+    "         \n",
+    "\n",
+    "        /*String oldLetter = message1.substring(i);\n",
+    "        System.out.println(oldLetter);\n",
+    "        int oldIndex = Arrays.asList(letters).indexOf(oldLetter);\n",
+    "        String newLetter = letters[(oldIndex + 3) % 26];\n",
+    "        newMessage += newLetter;\n",
+    "        //System.out.println(message1.indexOf(letters[i+3]));\n",
+    "        */\n",
     "    }\n",
-    "}"
+    "    System.out.println(\"\");\n",
+    "\n",
+    "}\n",
+    "public static void main(String[] args) {\n",
+    "    CaesarCipher decode = new CaesarCipher(message1);\n",
+    "    CaesarCipher decode2 = new CaesarCipher(message2); \n",
+    "    CaesarCipher decode3 = new CaesarCipher(message3); \n",
+    "}\n",
+    "}\n",
+    "\n",
+    "CaesarCipher.main(null);"
    ]
   }
  ],
@@ -69,8 +99,12 @@
    "name": "java"
   },
   "language_info": {
-   "name": "java",
-   "version": "3.8.10"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
   "orig_nbformat": 4,
   "vscode": {
