add more and create all hw

--- a/_notebooks/2022-12-01-unit5-classes.ipynb
+++ b/_notebooks/2022-12-01-unit5-classes.ipynb
@@ -16,6 +16,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "When creating java classes, it is important to have a good name for your class. The name of the class should\n",
+    "* have words that are relevant to the code\n",
+    "* aren't similar to another class name where they might be confused\n",
+    "* not single letter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Homework\n"
    ]
   }
