--- a/_notebooks/2022-10-26-arrays_frq.ipynb
+++ b/_notebooks/2022-10-26-arrays_frq.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Array Lesson Homework\n",
+    "# Unit 6 Lesson Homework\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
