--- a/_notebooks/2022-12-01-classes-hw.ipynb
+++ b/_notebooks/2022-12-01-classes-hw.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classes Lesson Homework\n",
+    "# Unit 5 Lesson Homework\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
