--- a/_notebooks/2022-12-01-unit2-objects-lesson-frq.ipynb
+++ b/_notebooks/2022-12-01-unit2-objects-lesson-frq.ipynb
@@ -16,53 +16,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To combine two different strings, you can use <mark>concatenation</mark> which can combine two or more strings to create one new string."
+    "After creating an object for a class, a <mark>constructor</mark> is called and can set initial values for the object attributes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
-    "public class WordMatch {\n",
-    "    /** The secret string. */\n",
-    "    private String secret;\n",
-    "    /** Constructs a WordMatch object with the given secret string of lowercase letters. */\n",
+    "public class Main {\n",
+    "    int x;  // Create a class attribute\n",
+    "  \n",
+    "    // Create a class constructor for the Main class\n",
+    "    public Main() {\n",
+    "      x = 5;  // Set the initial value for the class attribute x\n",
+    "    }\n",
+    "  \n",
+    "    public static void main(String[] args) {\n",
+    "      Main myObj = new Main(); // Create an object of class Main (This will call the constructor)\n",
+    "      System.out.println(myObj.x); // Print the value of x\n",
+    "    }\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<mark>Accessor</mark> and <mark>mutator</mark> methods can be used to return the value of a private variable and change the value of the variable respectively. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class CheckingAccount{\n",
+    "    private int balance;\n",
     "    \n",
-    "    /** Returns a score for guess, as described in part (a).\n",
-    "    * Precondition: 0 < guess.length() <= secret.length()\n",
-    "    */\n",
-    "    public int scoreGuess(String guess) { \n",
-    "        int count = 0;\n",
-    "        for (int i = 0; i <= secret.length() - guess.length(); i++) {\n",
-    "            if (secret.substring(i, i + guess.length()).equals(guess)) {\n",
-    "                count++;\n",
-    "            }\n",
-    "            \n",
-    "        }\n",
-    "        return count * guess.length() * guess.length();\n",
-    "        /* to be implemented in part (a) */ \n",
+    "    //An accessor method\n",
+    "    public int getBalance(){\n",
+    "      return this.balance;\n",
     "    }\n",
-    "    /** Returns the better of two guesses, as determined by scoreGuess and the rules for a\n",
-    "    * tie-breaker that are described in part (b).\n",
-    "    * Precondition: guess1 and guess2 contain all lowercase letters.\n",
-    "    * guess1 is not the same as guess2.\n",
-    "    */\n",
-    "    public String findBetterGuess(String guess1, String guess2) { \n",
-    "        /* to be implemented in part (b) */ \n",
-    "        if (scoreGuess(guess1) > scoreGuess(guess2)) {\n",
-    "            return guess1;\n",
-    "        }\n",
-    "        if (scoreGuess(guess2) > scoreGuess(guess1)) {\n",
-    "            return guess2;\n",
-    "        }\n",
-    "        if (guess1.compareTo(guess2) > 0) {\n",
-    "            return guess1;\n",
-    "        }\n",
-    "        return guess2;\n",
-    "    }\n",
-    "} "
+    "\n",
+    "    //A mutator method\n",
+    "    public void setBalance(int newBalance){\n",
+    "        this.balance = newBalance;\n",
+    "      }\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To combine two different strings, you can use <mark>concatenation</mark> which can combine two or more strings to create one new string."
    ]
   }
  ],
@@ -76,7 +94,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
