--- a/_notebooks/2022-11-28-primitives-hw.ipynb
+++ b/_notebooks/2022-11-28-primitives-hw.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit One Lesson Homework\n",
+    "# Unit 1 Lesson Homework\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
