--- a/_notebooks/2022-12-01-if-then-hw.ipynb
+++ b/_notebooks/2022-12-01-if-then-hw.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FRQ 2019 #1 \n",
+    "# Unit 3 Lesson Homework\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FRQ 2019 #1 "
    ]
   },
   {
