--- a/_notebooks/2022-12-01-unit5-classes.ipynb
+++ b/_notebooks/2022-12-01-unit5-classes.ipynb
@@ -26,7 +26,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework\n"
+    "# Homework\n",
+    "[Homework](https://jz21324.github.io/Vcode/jupyter/2022/12/01/classes-hw.html)"
    ]
   }
  ],
