--- a/_notebooks/2022-12-01-unit2-objects-lesson-frq.ipynb
+++ b/_notebooks/2022-12-01-unit2-objects-lesson-frq.ipynb
@@ -82,6 +82,14 @@
    "source": [
     "To combine two different strings, you can use <mark>concatenation</mark> which can combine two or more strings to create one new string."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework\n",
+    "[Homework](https://jz21324.github.io/Vcode/jupyter/2022/12/01/objects-hw.html)"
+   ]
   }
  ],
  "metadata": {
