--- a/_notebooks/2022-12-01-unit3-if-then.ipynb
+++ b/_notebooks/2022-12-01-unit3-if-then.ipynb
@@ -102,6 +102,14 @@
     "    System.out.println(\"You have an unknown food\");\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework\n",
+    "[Homework](https://jz21324.github.io/Vcode/jupyter/2022/09/20/frq1_2019.html)"
+   ]
   }
  ],
  "metadata": {
