--- a/_notebooks/2022-12-01-arrays_hw.ipynb
+++ b/_notebooks/2022-12-01-arrays_hw.ipynb
@@ -16,6 +16,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Score N/A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# FRQ 3a Arrays"
    ]
   },
