--- a/_notebooks/2022-12-01-objects-hw.ipynb
+++ b/_notebooks/2022-12-01-objects-hw.ipynb
@@ -16,6 +16,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Score 0.95/1.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# FRQ 2021"
    ]
   },
