--- a/_notebooks/2022-12-01-iteration-hw.ipynb
+++ b/_notebooks/2022-12-01-iteration-hw.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Score 0.8/1.0"
+   ]
   },
   {
    "cell_type": "code",
